# tree-sitter-haskell-contrib

./: .gitattributes  .gitignore  README.md  flake.nix  justfile
.github/workflows/: test.yml
common/: recipes.just  utils.mjs
common/grammar/: combinators.mjs  haskell.mjs  soup.mjs
common/scanners/: cabal.c  ghc-core-explain.c  ghc-core.c
test/: cabal-files.sh  check-queries.sh  gen-corpus.sh  ghc-cmm-files.sh  ghc-core-files.sh  ghc-files.sh  ghc-stg-files.sh  parse-corpus.sh  parse-lib.sh  validate-injections.sh
test/files/: cabal-files.sh  cabal-project-files.sh  find-corpus.sh  ghc-core-explain-files.sh  ghc-dump-files.sh  ghc-files.sh
test/fixtures/: Classes.hs  Coerce.hs  Families.hs  Ffi.hs  Generics.hs  Patterns.hs  Pragmas.hs  Strictness.hs
test/lib/: parse-lib.sh
test/perf/: bench-corpus.sh  flamegraph-corpus.sh  valgrind-corpus.sh
test/runners/: check-queries.sh  extract-golden.sh  gen-corpus.sh  parse-corpus.sh  validate-injections.sh
tree-sitter-cabal/: grammar.js  justfile  tree-sitter.json
tree-sitter-cabal-project/: .gitignore  grammar.js  justfile  tree-sitter.json
tree-sitter-cabal/test/extract-samples/: build-depends.cabal  conditionals.cabal  edge-cases.cabal  package.cabal  sections.cabal
tree-sitter-ghc-cmm/: .gitignore  grammar.js  justfile  tree-sitter.json
tree-sitter-ghc-core/: grammar.js  justfile  tree-sitter.json
tree-sitter-ghc-core-explain/: grammar.js  justfile  tree-sitter.json
tree-sitter-ghc-dump/: grammar.js  justfile  tree-sitter.json
tree-sitter-ghc-stg/: grammar.js  justfile  tree-sitter.json
(+121 files in other folders)
