cabal-version: >=1.10
name: depends-zoo
version: 0.3.1.0

library
  build-depends:
      base >=4.14 && <5
    , bytestring ^>= 0.11
    , containers:internal
    , mtl >= 2.2 && < 2.4
    , acme:{core,extra}
    , text ==1.2.*
  default-extensions: OverloadedStrings, LambdaCase, TypeApplications

library internal
  build-depends: base ^>=4.14, aeson
  visibility: public
